--- a/src/index.scss
+++ b/src/index.scss
@@ -124,6 +124,28 @@
   color: inherit;
 }
 
+.notfound {
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  .container {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+
+    a {
+      padding: 8px 15px;
+      background-color: orange;
+      color: #fff;
+      font-weight: 600;
+      text-decoration: none;
+      margin-top: 14px;
+    }
+  }
+}
+
 .navbar {
   height: 70px;
   background-color: #fff;
