--- a/src/components/home/index.scss
+++ b/src/components/home/index.scss
@@ -1,5 +1,5 @@
 .hero-section {
-  background-image: url(../public/images/back-hero.jpg);
+  background-image: url(../../assets/back-hero.jpg);
   background-position: 50% 50%;
   background-size: cover;
   background-repeat: no-repeat;
